# class-reader

./: .gitignore  Cargo.toml  README.md  TODO list for reader.md  justfile
.github/workflows/: rust.yml
src/: class_access_flags.rs  class_file.rs  class_file_field.rs  class_file_method.rs  class_file_version.rs  class_reader.rs  class_reader_error.rs  constant_pool.rs  exception_table.rs  field_flags.rs  field_type.rs  instruction.rs  lib.rs  line_number.rs  line_number_table.rs  method_descriptor.rs  method_flags.rs  program_counter.rs  wasm_wrappers.rs
tests/integration/: assertions.rs  constants_class_test.rs  deprecated_class_test.rs  exceptions.rs  pojo_class_test.rs  utils.rs
