[package]
name = "class-reader"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Bergia <andreabergia@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1"
bitflags = "1.3"
strum_macros = "0.24"
result = "1.0.0"
log = "0.4.17"
test-log = "0.2.11"
env_logger = "*"
itertools = "0.10.5"
cesu8 = "1.1"
nom = "7.1.3"
wasm-bindgen = { version = "0.2.84", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]
