[package]
name = "class-reader"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Bergia <andreabergia@gmail.com>"]
description = "A simple library to read java .class files"
license = "Apache-2.0"
repository = "https://github.com/andreabergia/class-reader"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1"
bitflags = "2.4"
strum_macros = "0.24"
result = "1.0.0"
log = "0.4.17"
test-log = "0.2.11"
env_logger = "*"
itertools = "0.10.5"
cesu8 = "1.1"
wasm-bindgen = { version = "0.2.84", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
tsify = "0.4.5"

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]
